<resources>
    <string name="app_name">安全预警</string>
    <string name="text_login">登录</string>
    <string name="hint_no_set">未设置</string>
    <string name="text_affiliated_institution">所属机构</string>
    <string name="text_telephone_number">手机号码</string>
    <string name="text_modify_password">修改密码</string>
    <string name="text_about_us">关于我们</string>
    <string name="text_msg_center">消息中心</string>
    <string name="title_safe_trend">安全趋势</string>
    <string name="title_public_resource">公共资源</string>
    <string name="text_commit">提交</string>
    <string name="hint_input_tel">请输入手机号码</string>
    <string name="hint_input_code">请输入验证码</string>
    <string name="text_remember_password">记住密码</string>
    <string name="text_forget_password">忘记密码?</string>
    <string name="title_total_set">设备总数</string>
    <string name="title_prefect_rate">完好率</string>
    <string name="title_fire">火警</string>
    <string name="title_wraning">预警</string>
    <string name="title_fault">故障</string>
    <string name="title_system_management">系统管理</string>
    <string name="title_my_task">我的任务</string>
    <string name="title_duty_status">当值状态</string>
    <string name="title_propaganda_training">宣传培训</string>
    <string name="title_reset_password">重置密码</string>
    <string name="title_resource">详细资源</string>
    <string name="text_logining">正在登录...</string>
    <string name="text_loading">正在处理中...</string>
    <string name="title_alarm_data">告警数据</string>
    <string name="title_inspection_task">巡检任务</string>
    <string name="title_fire_facilities">消防设施</string>
    <string name="title_grid_statistics">网格统计</string>
    <string name="title_grider">网格员</string>
    <string name="text_unit_name">单位名称：</string>
    <string name="text_unit_position">单位位置：</string>
    <string name="text_unit_type">类\u3000\u3000型：</string>
    <string name="text_regulatory_level">监管等级：</string>
    <string name="text_set_name">设备名称：</string>
    <string name="text_set_unit">所属单位：</string>
    <string name="text_set_state">状\u3000\u3000态：</string>
    <string name="text_set_position">位\u3000\u3000置：</string>
    <string name="text_user_tel">联系电话：</string>
    <string name="text_user_type">用户角色：</string>
    <string name="text_user_name">用&#160;&#160;户&#160;&#160;名：</string>
    <string name="title_add_unit">增加单位</string>
    <string name="title_add_set">增加设备</string>
    <string name="title_add_user">增加用户</string>
    <string name="text_finish">完成</string>
    <string name="text_present_unit">上级单位</string>
    <string name="text_unit_sort">单位类型</string>
    <string name="hint_input_name">输入名字</string>
    <string name="text_contact">联&#160;&#160;系&#160;&#160;人</string>
    <string name="hint_input_telephone">输入联系电话</string>
    <string name="text_telephone">联系电话</string>
    <string name="text_set_type">设备类型</string>
    <string name="text_set_number">设备编号</string>
    <string name="hint_set_position">输入单位所在位置</string>
    <string name="text_set_details_position">详细位置</string>
    <string name="hint_product_company_name">请输入厂家名称</string>
    <string name="text_product_company">厂\u3000\u3000家</string>
    <string name="text_brand">品\u3000\u3000牌</string>
    <string name="hint_brand_name">请输入品牌名称</string>
    <string name="text_guarantee">到期日期</string>
    <string name="text_inspection_way">巡检方式</string>
    <string name="text_set_size">设备型号</string>
    <string name="hint_set_size">请输入设备型号</string>
    <string name="text_presents_unit">所属单位</string>
    <string name="text_user_sort">用户角色</string>
    <string name="hint_input_username">输入用户名</string>
    <string name="text_username">用&#160;&#160;户&#160;&#160;名</string>
    <string name="hint_input_phone">输入手机号</string>
    <string name="text_request">正在获取...</string>
    <string name="text_unit_name_x">单位名称</string>
    <string name="hint_unit_name">请输入单位名称</string>
    <string name="title_position">位置信息</string>
    <string name="text_inspection_unit">巡检单位</string>
    <string name="text_set_build">所属建筑</string>
    <string name="text_floor">楼\u3000\u3000层</string>
    <string name="text_online_answer">在线答题</string>
    <string name="text_hydraulic_pressure">水压</string>
    <string name="text_handle">处理</string>
    <string name="text_remark">备注</string>
    <string name="text_input_content">请输入内容</string>
    <string name="text_handler">处理</string>
    <string name="text_username_x">姓\u3000\u3000名</string>
    <string name="text_check_num">查岗次数</string>
    <string name="text_return_num">回复次数</string>
    <string name="text_choice_all">全选</string>
    <string name="text_send">发送</string>
    <string name="title_check_post">一键查岗</string>
    <string name="title_local">实时定位</string>
    <string name="text_finish_local">结束定位</string>
    <string name="text_device_num">设备数</string>
    <string name="text_check_rate">巡检率</string>
    <string name="text_state">状\u3000态</string>
    <string name="title_set_details">设备详情</string>
    <string name="text_number">编\u3000\u3000号</string>
    <string name="text_type">类\u3000\u3000型</string>
    <string name="text_check_state">巡检状态</string>
    <string name="text_position">安装位置</string>
    <string name="text_check_result">巡检结果</string>
    <string name="text_describe">具体描述</string>
    <string name="hint_describe">请输入具体问题</string>
    <string name="text_set_commit">提交</string>
    <string name="title_task_list">任务列表</string>
    <string name="text_sign_out">退出登录</string>
    <string name="title_task_details">任务详情</string>
    <string name="text_set_name_x">设备名称</string>
    <string name="text_set_position_x">详细位置</string>
    <string name="text_inspection_state">巡检状态</string>
    <string name="text_set_state_x">设备状态</string>
    <string name="text_picture">图片：</string>
    <string name="hint_input_floor">请输入楼层</string>
    <string name="text_position_xx">巡检地址</string>
    <string name="title_add_child_set">增加子设备</string>
    <string name="text_min_value">最&#160;&#160;小&#160;&#160;值</string>
    <string name="text_max_value">最&#160;&#160;大&#160;&#160;值</string>
    <string name="text_check_rate_x">巡&#160;&#160;检&#160;&#160;率：</string>
    <string name="text_reply_date">时\u3000\u3000间</string>
    <string name="text_reply_position">位\u3000\u3000置</string>
    <string name="text_scan_download">扫描下载</string>
</resources>
