<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/base_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bg"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:orientation="vertical">

            <com.cqyanyu.mvpframework.view.ItemOptionView
                android:id="@+id/iov_present_unit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_item"
                app:contentColor="@color/color_text"
                app:contentGravity="left"
                app:contentSize="@dimen/text_size_14"
                app:rightIcon="@mipmap/ic_xiayiye"
                app:rightIconSize="@dimen/dp_24"
                app:title="@string/text_presents_unit"
                app:titleColor="@color/color_text"
                app:titleSize="@dimen/text_size_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_marginRight="@dimen/common_margin"
                android:background="@color/color_line" />

            <com.cqyanyu.mvpframework.view.ItemOptionView
                android:id="@+id/iov_user_sort"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_item"
                app:contentColor="@color/color_text"
                app:contentGravity="left"
                app:contentSize="@dimen/text_size_14"
                app:rightIcon="@mipmap/ic_xiayiye"
                app:rightIconSize="@dimen/dp_24"
                app:title="@string/text_user_sort"
                app:titleColor="@color/color_text"
                app:titleSize="@dimen/text_size_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_marginRight="@dimen/common_margin"
                android:background="@color/color_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_item"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/text_username"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/text_size_14" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/hint_input_username"
                    android:paddingLeft="@dimen/common_margin"
                    android:paddingRight="@dimen/common_margin"
                    android:singleLine="true"
                    android:textColor="@color/color_text"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_marginRight="@dimen/common_margin"
                android:background="@color/color_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_item"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/common_margin"
                android:paddingRight="@dimen/common_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/text_telephone"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/text_size_14" />

                <EditText
                    android:id="@+id/et_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/hint_input_phone"
                    android:inputType="number"
                    android:paddingLeft="@dimen/common_margin"
                    android:paddingRight="@dimen/common_margin"
                    android:singleLine="true"
                    android:textColor="@color/color_text"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_marginRight="@dimen/common_margin"
                android:background="@color/color_line" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>